# local-first-router

./: .env.example  .gitignore  ACTIVE_WEB_SEARCH.md  ALWAYS_WEB_SEARCH.md  API_KEY_SETUP.md  BUILD_SUMMARY.md  COST_CALCULATION.md  DEPLOYMENT.md  DEPLOY_NOW.md  DETERMINISTIC_SEARCH_IMPLEMENTATION.md  DETERMINISTIC_WEB_SEARCH_DESIGN.md  DISTRIBUTION.md  END_USER_README.md  FIX_SETUP.md  GITHUB_AUTH.md  GITHUB_DEPLOYMENT.md  GITHUB_SETUP.md  HOSTING_PLAN.md  INSTALL_TESSERACT.md  INSTALL_WITHOUT_BREW.md  NEXT_STEPS.md  OCR_IMPLEMENTATION.md  PREPARE_GITHUB.md  PRIVACY.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  SEARCH_OUTPUT_FORMAT.md  SELF_CONTAINED_SOLUTION.md  TROUBLESHOOT.md  USER_API_KEY_GUIDE.md  WEB_SEARCH_EXPLANATION.md  WEB_SEARCH_FEATURE.md  WEB_SEARCH_IMPLEMENTATION.md  WEB_SEARCH_IMPROVEMENTS.md  WEB_SEARCH_SUMMARY.md  WINDOWS_SUPPORT.md  config.yaml  install-full.sh  (+7 more)
backend/: README.md  requirements.txt
backend/app/: __init__.py  db.py  main.py  policy.py  router_service.py  schemas.py  settings.py
backend/tests/: __init__.py  test_policy.py  test_routing.py
frontend/: Dockerfile  README.md  index.html  nginx.conf
frontend/src/: App.tsx  index.css
local-first-router-v1.0.0/: .env.example  LICENSE  Makefile  QUICK_START.txt  START_HERE.txt  docker-compose.full.yml  docker-compose.yml  stop.sh
local-first-router-v1.0.0/backend/: Dockerfile  pyproject.toml
local-first-router-v1.0.0/backend/app/: cache.py  cost.py  main.py  models.py  router_service.py  schemas.py
local-first-router-v1.0.0/frontend/: package-lock.json  (+2 more)
(+12 files in other folders)
