[project]
name = "local-first-router"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "requests>=2.31.0",
  "SQLAlchemy>=2.0",
  "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

